<resources>
    <string name="app_name">My Wallet</string>
    <string name="continue1">Continue</string>
    <string name="skip">Skip For Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="loginu"><u>Login</u></string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="not_account">Don\'t have an account ?</string>
    <string name="register"><u>Register</u></string>
    <string name="register1">Register</string>
    <string name="confirm"><![CDATA[Agree To The Terms Of Service & Privacy Policy]]></string>
    <string name="have_account">Alreay have an account ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">Name</string>
    <string name="last_name">Surname</string>
    <string name="verify">Verify your \nphone number</string>
    <string name="verify_number">Verify</string>
    <string name="send_code">Send Code</string>
    <string name="phone_number">SMS code sent to</string>
    <string name="verify_code">Verification Code</string>
    <string name="empty_body">Bo\'sh natija qayti. Iltimos qo\'llab-quvvatlash markaziga habar bering!</string>
    <string name="msg_unexpected_error">Cannot proceed your request, please try again later</string>
    <string name="forgot_password">Restore Passrowd</string>
    <string name="restore">Restore</string>
    <string name="remember">Remember Me</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="exit">Log Out</string>

    <string name="reason_generic">Something went wrong</string>
    <string name="reason_persistance_empty">There are no saved launches</string>
    <string name="reason_network">Network error</string>
    <string name="reason_empty_body">Response is empty</string>
    <string name="reason_response">Woops, seems we got a server error</string>
    <string name="reason_timeout">Server timed out</string>
    <string name="retry">Retry</string>
    <string name="add_card">Add Card</string>
</resources>