<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screens.VerifyActivity">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtApp"
            style="@style/Text.Header"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

        <TextView
            android:id="@+id/txtLogin"
            style="@style/Text.Header"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verify"
            android:textAllCaps="true"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtApp"
            app:layout_constraintVertical_bias="0.05" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/phone_number"
            android:textColorHint="@color/colorHint"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/color_hint_phone"
            app:layout_constraintBottom_toTopOf="@id/layoutPassword"
            app:layout_constraintTop_toBottomOf="@id/txtLogin"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_icon_mobile"
            app:startIconTint="@color/colorAccent">

            <com.github.pinball83.maskededittext.MaskedEditText
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_edit_text"
                android:drawablePadding="25dp"
                android:enabled="false"
                android:gravity="center|left"
                android:inputType="phone"
                android:singleLine="true"
                app:mask="+998 (**) *** ** **"
                app:notMaskedSymbol="*"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/verify_code"
            android:textColorHint="@color/colorHint"
            app:boxStrokeWidth="0dp"
            app:hintAnimationEnabled="false"
            app:hintTextColor="@color/color_hint_phone"
            app:layout_constraintBottom_toTopOf="@id/button_verify"
            app:layout_constraintTop_toBottomOf="@id/layoutPan">

            <com.github.pinball83.maskededittext.MaskedEditText
                android:id="@+id/text_code"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_edit_text"
                android:gravity="center"
                android:inputType="numberSigned"
                android:singleLine="true"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_verify"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorRed"
            android:padding="10dp"
            android:text="@string/verify_number"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutPassword"
            tools:ignore="UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>