<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.screens.RegistrationActivity">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtApp"
                style="@style/Text.Header"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLogo" />

            <TextView
                android:id="@+id/txtRegister"
                style="@style/Text.Header"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtApp"
                app:layout_constraintVertical_bias="0.02" />

            <LinearLayout
                android:id="@+id/layoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@id/layoutPhone"
                app:layout_constraintTop_toBottomOf="@id/txtRegister"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/bg_edit_text"
                        android:drawablePadding="25dp"
                        android:gravity="center|left"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        app:placeholderText="@string/first_name"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edit_text"
                        android:drawablePadding="25dp"
                        android:gravity="center|left"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        app:placeholderText="@string/last_name"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/enter_mobile_no"
                android:textColorHint="@color/colorHint"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="@color/color_hint_phone"
                app:layout_constraintBottom_toTopOf="@id/layoutPassword1"
                app:layout_constraintTop_toBottomOf="@id/layoutName"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintVertical_chainStyle="packed"
                app:startIconDrawable="@drawable/ic_icon_mobile"
                app:startIconTint="@color/colorAccent">

                <com.github.pinball83.maskededittext.MaskedEditText
                    android:id="@+id/text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_edit_text"
                    android:drawablePadding="25dp"
                    android:gravity="center|left"
                    android:inputType="numberPassword|phone"
                    android:singleLine="true"
                    app:mask="+998 ** *** ** **"
                    app:notMaskedSymbol="*"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/colorHint"
                app:boxStrokeWidth="0dp"
                app:hintAnimationEnabled="false"
                app:hintTextColor="@color/color_hint"
                app:layout_constraintBottom_toTopOf="@id/button_register"
                app:layout_constraintTop_toBottomOf="@id/layoutPassword1"
                app:passwordToggleDrawable="@drawable/password_toggle_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                app:placeholderText="@string/confirm_password"
                app:placeholderTextColor="@color/colorHint"
                app:startIconDrawable="@drawable/ic_icon_password"
                app:startIconTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_password1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_edit_text"
                    android:drawablePadding="25dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/colorHint"
                app:boxStrokeWidth="0dp"
                app:hintAnimationEnabled="false"
                app:hintTextColor="@color/color_hint"
                app:layout_constraintBottom_toTopOf="@id/layoutPassword"
                app:layout_constraintTop_toBottomOf="@id/layoutPhone"
                app:passwordToggleDrawable="@drawable/password_toggle_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                app:placeholderText="@string/password"
                app:placeholderTextColor="@color/colorHint"
                app:startIconDrawable="@drawable/ic_icon_password"
                app:startIconTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_password2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_edit_text"
                    android:drawablePadding="25dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorRed"
                android:padding="10dp"
                android:text="@string/register1"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutPassword"
                tools:ignore="UnusedAttribute" />

            <CheckBox
                android:id="@+id/btnConfirm"
                style="@style/Text.Info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:background="?android:selectableItemBackground"
                android:checked="true"
                android:clickable="true"
                android:focusable="true"
                android:foregroundGravity="center"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/confirm"
                android:textAlignment="center"
                android:textColor="@color/colorHint"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/layoutRegister"
                app:layout_constraintTop_toBottomOf="@id/button_register" />

            <LinearLayout
                android:id="@+id/layoutRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnConfirm">

                <TextView
                    style="@style/Text.Info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/have_account"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/btnLogin"
                    style="@style/Text.Info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="3dp"
                    android:text="@string/loginu"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>